tests/fails/dup_key.lt
  
var x, y = 3, 4

var u = {[y-x] = 1, [2*x-y] = 4, [x] = 9, [y] = 16, [2*y-x] = 25, [2*x-y] = 36}  -- duplicate key at pos 2 and 6
print(u[1], u[2], u[3], u[4], u[5])

var s = '0'

print( {
['b' .. s] = 7
  , ['b' .. s] = 8   -- duplicate at pos 1 and 2
}
)

